[deaton/trenchripper] reverting to O2 snapshot.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-02_phase_segmentation_data_prep/retooling_training_data_prep.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-02_phase_segmentation_data_prep/retooling_training_data_prep.ipynb
@@ -49,7 +49,53 @@
     "from paulssonlab.deaton.trenchripper.trenchripper import (\n",
     "    pandas_hdf5_handler,\n",
     "    kymo_handle,\n",
-    "    writedir,\n",
+    "    writedi    def post_process(self,dask_controller):\n",
+    "        dask_controller.futures = {}\n",
+    "\n",
+    "        df = dd.read_parquet(self.kymographpath + \"/metadata\").persist()\n",
+    "#         df = self.add_trenchids(df).persist() #NEW\n",
+    "        \n",
+    "        trenchid_list = df[\"trenchid\"].unique().compute().tolist()\n",
+    "        file_list = df[\"File Index\"].unique().compute().tolist()\n",
+    "        outputdf = df.drop(columns = [\"File Index\",\"Image Index\"]).persist()\n",
+    "        trenchiddf = df.set_index(\"trenchid\").persist()\n",
+    "\n",
+    "#         with open(self.kymographpath + \"/metadata.pkl\", 'rb') as handle:\n",
+    "#             metadata = pickle.load(handle)\n",
+    "\n",
+    "        num_tpts = len(trenchiddf[\"timepoints\"].unique().compute().tolist())\n",
+    "        chunk_size = self.trenches_per_file*num_tpts\n",
+    "        if len(trenchid_list)%self.trenches_per_file == 0:\n",
+    "            num_files = (len(trenchid_list)//self.trenches_per_file)\n",
+    "        else:\n",
+    "            num_files = (len(trenchid_list)//self.trenches_per_file) + 1\n",
+    "\n",
+    "        file_indices = np.repeat(np.array(range(num_files)),chunk_size)[:len(outputdf)]\n",
+    "        file_trenchid = np.repeat(np.array(range(self.trenches_per_file)),num_tpts)\n",
+    "        file_trenchid = np.repeat(file_trenchid[:,np.newaxis],num_files,axis=1).T.flatten()[:len(outputdf)]\n",
+    "        file_indices = pd.DataFrame(file_indices)\n",
+    "        file_trenchid = pd.DataFrame(file_trenchid)\n",
+    "        file_indices.index = outputdf.index\n",
+    "        file_trenchid.index = outputdf.index\n",
+    "\n",
+    "        outputdf[\"File Index\"] = file_indices[0]\n",
+    "        outputdf[\"File Trench Index\"] = file_trenchid[0]\n",
+    "        parq_file_idx = outputdf.apply(lambda x: int(f'{int(x[\"File Index\"]):04}{int(x[\"File Trench Index\"]):04}{int(x[\"timepoints\"]):04}'), axis=1, meta=int)\n",
+    "        outputdf[\"File Parquet Index\"] = parq_file_idx\n",
+    "        outputdf = outputdf.astype({\"File Index\":int,\"File Trench Index\":int,\"File Parquet Index\":int})\n",
+    "\n",
+    "        random_priorities = np.random.uniform(size=(num_files,))\n",
+    "        for k in range(0,num_files):\n",
+    "            priority = random_priorities[k]\n",
+    "            future = dask_controller.daskclient.submit(self.reorg_kymograph,k,df,trenchid_list,trenchiddf,retries=1,priority=priority)\n",
+    "            dask_controller.futures[\"Kymograph Reorganized: \" + str(k)] = future\n",
+    "\n",
+    "        reorg_futures = [dask_controller.futures[\"Kymograph Reorganized: \" + str(k)] for k in range(num_files)]\n",
+    "        future = dask_controller.daskclient.submit(self.cleanup_kymographs,reorg_futures,file_list,retries=1,priority=priority)\n",
+    "        dask_controller.futures[\"Kymographs Cleaned Up\"] = future\n",
+    "        dask_controller.daskclient.gather([future])\n",
+    "\n",
+    "        dd.to_parquet(outputdf, self.kymographpath + \"/metadata\",engine='fastparquet',compression='gzip',write_metadata_file=True)r,\n",
     ")\n",
     "from paulssonlab.deaton.trenchripper.trenchripper import hdf5lock\n",
     "from paulssonlab.deaton.trenchripper.trenchripper import object_f_scores\n",
