--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-07-02_reassembling_training_data/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-07-02_reassembling_training_data/Master.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trenchripper as tr\n",
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
     "\n",
     "import warnings\n",
     "\n",
@@ -78,8 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/CN_Limited_GC_restart.nd2\""
+    "headpath = \"/n/scratch3/users/d/de64/ezrdm_training_sb7/ezrdm_training_sb7\"\n",
+    "nd2file = \"/n/scratch3/users/d/de64/ezrdm_training_sb7/ezrdm_training_sb7.nd2\""
    ]
   },
   {
@@ -185,6 +185,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hdf5_extractor = tr.ndextract.tiff_extractor(\n",
+    "#     tiffpath,\n",
+    "#     headpath,\n",
+    "#     [\"Phase\",\"YFP\"],tpts_per_file=50\n",
+    "# )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -262,6 +275,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[ '/n/scratch3/users/d/de64/190917_20x_phase_gfp_segmentation002',\n",
+    " '/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/190925_20x_phase_yfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/ezrdm_training_sb7',\n",
+    " '/n/scratch3/users/d/de64/mbm_training_sb7',\n",
+    " '/n/scratch3/users/d/de64/Sb7_L35',\n",
+    " '/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_2_1_TOP',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms',\n",
+    " '/n/scratch3/users/d/de64/RpoSOutliers_WT_hipQ_100X',\n",
+    " '/n/scratch3/users/d/de64/Main_Experiment',\n",
+    " '/n/scratch3/users/d/de64/bde17_gotime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headpath = \"/n/scratch3/users/d/de64/ezrdm_training_sb7/ezrdm_training_sb7\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Test Parameters\n",
     "\n"
    ]
@@ -310,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "viewer.view()"
+    "viewer.view(width=1600)"
    ]
   },
   {
@@ -587,7 +627,7 @@
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
     "    n_workers=20,\n",
-    "    memory=\"4GB\",\n",
+    "    memory=\"8GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
@@ -895,6 +935,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[ '/n/scratch3/users/d/de64/190917_20x_phase_gfp_segmentation002',\n",
+    " '/n/scratch3/users/d/de64/190922_20x_phase_gfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/190925_20x_phase_yfp_segmentation',\n",
+    " '/n/scratch3/users/d/de64/ezrdm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/mbm\\\\ training\\\\ sb7',\n",
+    " '/n/scratch3/users/d/de64/Sb7_L35',\n",
+    " '/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_2_1_TOP',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms',\n",
+    " '/n/scratch3/users/d/de64/RpoSOutliers_WT_hipQ_100X',\n",
+    " '/n/scratch3/users/d/de64/Main_Experiment',\n",
+    " '/n/scratch3/users/d/de64/bde17_gotime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import paulssonlab.deaton.trenchripper.trenchripper as tr\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(action=\"once\")\n",
+    "\n",
+    "import matplotlib\n",
+    "\n",
+    "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headpath = \"/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9/MM_DVCvecto_TOP_1_9\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Test Parameters"
    ]
   },
@@ -1058,6 +1142,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "['/n/scratch3/users/d/de64/ezrdm_training_sb7',\n",
+    " '/n/scratch3/users/d/de64/mbm_training_sb7',\n",
+    " '/n/scratch3/users/d/de64/Sb7_L35',\n",
+    " '/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_2_1_TOP',\n",
+    " '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--04--RUN_80ms',\n",
+    " '/n/scratch3/users/d/de64/RpoSOutliers_WT_hipQ_100X',\n",
+    " '/n/scratch3/users/d/de64/Main_Experiment',\n",
+    " '/n/scratch3/users/d/de64/bde17_gotime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headpath = \"/n/scratch3/users/d/de64/MM_DVCvecto_TOP_1_9/MM_DVCvecto_TOP_1_9\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Start Dask Workers"
    ]
   },
@@ -1070,8 +1178,8 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"01:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=50,\n",
-    "    memory=\"1GB\",\n",
+    "    n_workers=30,\n",
+    "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dask_controller.startdask()"
@@ -1296,7 +1404,7 @@
    "source": [
     "from ipywidgets import interactive, IntText, IntSlider\n",
     "\n",
-    "kyview = tr.analysis.kymograph_viewer(headpath, \"GFP\", \"fluorsegmentation\")"
+    "kyview = tr.analysis.kymograph_viewer(headpath, \"Phase\", \"fluorsegmentation\")"
    ]
   },
   {
