--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-11_assembling_training_data/transfering_datasets.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-06-11_assembling_training_data/transfering_datasets.ipynb
@@ -50,12 +50,12 @@
     "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/!!Jacob Quinn Shenker/190917/190917_20x_phase_gfp_segmentation002\",\\\n",
     "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Noah/190922/20x_segmentation_data/190922_20x_phase_gfp_segmentation\",\\\n",
     "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Noah/190922/20x_segmentation_data/190925_20x_phase_yfp_segmentation\",\\\n",
-    "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Carlos/Data_Ti6/SB7_trainingdata_Unet/ezrdm training sb7.nd2\",\\\n",
-    "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Carlos/Data_Ti6/SB7_trainingdata_Unet/mbm training sb7.nd2\",\\\n",
+    "    \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Carlos/Data_Ti6/SB7_trainingdata_Unet/ezrdm training sb7.nd2\",  #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Carlos/Data_Ti6/SB7_trainingdata_Unet/mbm training sb7.nd2\",\\\n",
     "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Carlos/Data_Ti5/before bl2+/SB7_trainingdata_NN_MM/Sb7_L35.nd2\",\\\n",
     "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Leoncini/DATA_Ti3/20190627--Vibrio/MM_DVCvecto_TOP_1_9.nd2\",\\\n",
     "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Leoncini/DATA_Ti3/20190628--Vibrio/Vibrio_2_1_TOP.nd2\",\\\n",
-    "    \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Leoncini/DATA_Ti6/20190724--Vibrio_A_B_VZRDM/Vibrio_A_B_VZRDM--04--RUN_80ms.nd2\",  #                   \"/n/files/SysBio/PAULSSON LAB/SILVIA/Ti3Data/2020_01_29/RpoSOutliers_WT_hipQ_100X.nd2\",\\\n",
+    "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Leoncini/DATA_Ti6/20190724--Vibrio_A_B_VZRDM/Vibrio_A_B_VZRDM--04--RUN_80ms.nd2\",\\\n",
+    "    #                   \"/n/files/SysBio/PAULSSON LAB/SILVIA/Ti3Data/2020_01_29/RpoSOutliers_WT_hipQ_100X.nd2\",\\\n",
     "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Daniel/Image_Data/Bacillus_Project/2019-05-31_DE85_training_data/exp_folder/Main_Experiment.nd2\",\\\n",
     "    #                   \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Daniel/Image_Data/Bacillus_Project/2019-06-18_DE85_training_data/bde17_gotime.nd2\",\\\n",
     "]"
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "targetdir_list"
+    "targetdir"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rsync -r '/n/files/SysBio/PAULSSON LAB/Personal Folders/Leoncini/DATA_Ti6/20190724--Vibrio_A_B_VZRDM/Vibrio_A_B_VZRDM--03--RUN_80ms.nd2' '/n/scratch3/users/d/de64/Vibrio_A_B_VZRDM--03--RUN_80ms'"
+    "!rsync -r \"/n/files/SysBio/PAULSSON LAB/Personal Folders/Carlos/Data_Ti6/SB7_trainingdata_Unet/ezrdm training sb7.nd2\" '/n/scratch3/users/d/de64/ezrdm training sb7/'"
    ]
   },
   {
