[cloning,shenker/cloning] Renamed digest_for_assembly to re_digest, moved all golden gate functions to their own module.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200725 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200725 LIB parts ingest.ipynb
@@ -35,7 +35,8 @@
     "from paulssonlab.api.util import base_url\n",
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.util as cloning_util\n",
-    "import paulssonlab.cloning.sequence as sequence"
+    "import paulssonlab.cloning.sequence as sequence\n",
+    "import paulssonlab.cloning.golden_gate as golden_gate"
    ]
   },
   {
@@ -202,9 +203,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "drive_service = plasmid_sheet.client.drive.service\n",
     "plasmid_folder = col[\"plasmid_maps\"]\n",
-    "plasmid_maps = api.google.list_drive(service, root=plasmid_folder)\n",
-    "drive_service = plasmid_sheet.client.drive.service"
+    "plasmid_maps = api.google.list_drive(drive_service, root=plasmid_folder)"
    ]
   },
   {
@@ -387,27 +388,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SeqFeature?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq1.reverse_complement??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from copy import deepcopy\n",
-    "from Bio.SeqFeature import SeqFeature, FeatureLocation\n",
-    "\n",
     "to_join = [\n",
     "    (sequence.reverse_complement(seq1), Restriction.BsaI, \"Name1\", \"promoter\"),\n",
     "    (sequence.reverse_complement(seq2), Restriction.BsaI, \"Name2\", \"RBS\"),\n",
@@ -416,31 +396,7 @@
     "    (sequence.reverse_complement(seq5), Restriction.BsaI, \"Name5\", \"misc_feature\"),\n",
     "]\n",
     "\n",
-    "seqs_to_assemble = []\n",
-    "for seq, enzyme, part_name, part_type in to_join:\n",
-    "    seqs = sequence.digest_for_assembly(seq, enzyme, linear=False)\n",
-    "    part, overhang1, overhang2 = seqs[0]\n",
-    "    part = deepcopy(part)\n",
-    "    label = SeqFeature(\n",
-    "        FeatureLocation(-len(overhang1[0]), len(part) + len(overhang2[0])),\n",
-    "        type=part_type,\n",
-    "    )\n",
-    "    label.qualifiers[\"label\"] = [part_name]\n",
-    "    features = [feature for feature in part.features if feature.type != \"source\"]\n",
-    "    part.features = [label, *features]\n",
-    "    # print(part.features)\n",
-    "    # TODO: filter out source annotation\n",
-    "    seqs_to_assemble.append((part, overhang1, overhang2))\n",
-    "assembly = sequence.assemble_golden_gate(seqs_to_assemble, linear=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assembly.name = \"test2\""
+    "golden_gate.assemble(to_join, linear=False)"
    ]
   },
   {
@@ -458,8 +414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/Users/jacob/Downloads/test2.gb\", \"w\") as f:\n",
-    "    f.write(assembly.format(\"gb\"))"
+    "sequence.re_digest(seq5, Restriction.BbsI, linear=False)"
    ]
   },
   {
@@ -467,7 +422,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sequence.re_digest(seq5, Restriction.BsaI, linear=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/Users/jacob/Downloads/test2.gb\", \"w\") as f:\n",
+    "    f.write(assembly.format(\"gb\"))"
+   ]
   }
  ],
  "metadata": {
