[cloning,shenker/cloning] Renamed _get_seq to get_seq, upper-case sequences before comparing overhangs for golden gates.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200725 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200725 LIB parts ingest.ipynb
@@ -388,6 +388,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from Bio.Seq import Seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "to_join = [\n",
     "    (sequence.reverse_complement(seq1), Restriction.BsaI, \"Name1\", \"promoter\"),\n",
     "    (sequence.reverse_complement(seq2), Restriction.BsaI, \"Name2\", \"RBS\"),\n",
@@ -397,33 +406,6 @@
     "]\n",
     "\n",
     "golden_gate.assemble(to_join, linear=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_.features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.re_digest(seq5, Restriction.BbsI, linear=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.re_digest(seq5, Restriction.BsaI, linear=False)"
    ]
   },
   {
