--- a/paulssonlab/src/paulssonlab/shenker/cloning/200726 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200726 LIB parts ingest.ipynb
@@ -12,7 +12,8 @@
     "from datetime import datetime\n",
     "import pygsheets\n",
     "import benchlingapi\n",
-    "import requests_html"
+    "import requests_html\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
@@ -214,18 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rows = plasmid_sheet.get_all_records()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def import_threeg_part(plasmid, seq_file):\n",
-    "    part = plasmid_to_part(plasmid)\n",
-    "    # MoClo golden gate assembly BC part for BCD24 (low expression bi-cistronic RBS, engineered for downstream context-independence; see https://doi.org/10.1038/nmeth.2404).\n",
+    "def import_threeg_part(plasmid, seq):\n",
+    "    part = plasmid_to_part(plasmid, Restriction.BsaI, seq)\n",
     "    name = {\n",
     "        \"P18m\": \"pT7\",\n",
     "        \"P33m\": \"pMutalik_med\",\n",
@@ -251,35 +242,36 @@
     "    return part\n",
     "\n",
     "\n",
-    "def import_densmore_part(plasmid, seq_file):\n",
-    "    part = plasmid_to_part(plasmid)\n",
+    "def import_densmore_part(plasmid, seq):\n",
+    "    part = plasmid_to_part(plasmid, Restriction.BsaI, seq)\n",
     "    part[\"Author*\"] = \"Douglas Densmore lab\"\n",
     "    return part\n",
     "\n",
     "\n",
-    "def import_jump_part(plasmid, seq_file):\n",
-    "    part = plasmid_to_part(plasmid)\n",
+    "def import_jump_part(plasmid, seq):\n",
+    "    part = plasmid_to_part(plasmid, Restriction.BsaI, seq)\n",
     "    part[\"Name*\"] = re.sub(r\"^pJUMP\\d+-\", \"\", plasmid[\"Names\"])\n",
     "    part[\"Author*\"] = \"Marcos Valenzuela-Ortega, Christopher French\"\n",
     "    return part\n",
     "\n",
     "\n",
-    "# accept extra columns via overrides={\"Tags\": \"foo\"}\n",
-    "# pass through tags from plasmid\n",
-    "\n",
-    "\n",
-    "def plasmid_to_part(plasmid):\n",
+    "def plasmid_to_part(plasmid, enzyme, seq):\n",
+    "    plasmid_id = plasmid[\"ID*\"]\n",
+    "    subseqs = golden_gate.re_digest(seq, enzyme, linear=False)\n",
+    "    seq, overhang1, overhang2 = subseqs[0]\n",
     "    part = {}\n",
     "    part[\"Name*\"] = plasmid[\"Names\"].split(\",\")[-1]\n",
     "    part[\"Tags\"] = plasmid[\"Tags\"]\n",
-    "    # part[\"Plasmid/Oligos (Cutter)*\"] = \"\"\n",
+    "    part[\"Plasmid/Oligos (Cutter)*\"] = f\"{plasmid_id}/{enzyme.__name__}\"\n",
     "    # part[\"Author*\"] = \"\"\n",
-    "    part[\"Date*\"] = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S.%f\")\n",
-    "    part[\"Upstream overhang*\"] = \"aaa\"\n",
-    "    part[\"Downstream overhang*\"] = \"bbb\"\n",
-    "    part[\"Sequence*\"] = \"aaaseqbbb\"\n",
+    "    part[\"Date*\"] = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "    part[\"Upstream overhang*\"] = str(overhang1[0])\n",
+    "    part[\"Downstream overhang*\"] = str(overhang2[0])\n",
+    "    # part[\"Sequence*\"] = str(overhang1[0]) + str(sequence.get_seq(seq)) + str(overhang2[0])\n",
+    "    part[\"Sequence*\"] = str(sequence.get_seq(seq))\n",
     "    part[\"Organism/codon usage*\"] = \"E. coli\"\n",
     "    part[\"Description\"] = plasmid[\"Description\"]\n",
+    "    # part[\"Source\"] = plasmid[\"Source*\"]\n",
     "    return part\n",
     "\n",
     "\n",
@@ -303,6 +295,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rows = plasmid_sheet.get_all_records()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rows[0]"
    ]
   },
@@ -312,7 +313,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api.util.regex_key(plasmid_maps, \"\")"
+    "parts = []\n",
+    "for row in tqdm(rows[:3]):\n",
+    "    matched = None\n",
+    "    for predicate, rule in part_rules:\n",
+    "        if predicate(row):\n",
+    "            matched = True\n",
+    "            seq_file = api.util.regex_key(\n",
+    "                plasmid_maps, f'{row[\"ID*\"]}\\\\.', check_duplicates=True\n",
+    "            )[\"id\"]\n",
+    "            seq = api.read_sequence(\n",
+    "                drive_service.files()\n",
+    "                .get_media(fileId=seq_file)\n",
+    "                .execute()\n",
+    "                .decode(\"utf8\")\n",
+    "            )\n",
+    "            part = rule(row, seq)\n",
+    "            parts.append(part)\n",
+    "            break\n",
+    "    if not matched:\n",
+    "        name = row[\"Names\"]\n",
+    "        # print(f\"skipping {name}\")"
    ]
   },
   {
@@ -321,16 +342,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for row in rows:\n",
-    "    for predicate, rule in part_rules:\n",
-    "        if predicate(row):\n",
-    "            seq_file = api.util.regex_key(\n",
-    "                plasmid_maps, f'{row[\"ID*\"]}\\\\.', check_duplicates=True\n",
-    "            )[\"id\"]\n",
-    "            part = rule(row, seq_file)\n",
-    "            # print(row[\"Names\"], part[\"Name*\"])\n",
-    "            print(part)\n",
-    "            break"
+    "parts[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parts[0][\"Upstream overhang*\"].__str__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parts[0][\"Upstream overhang*\"].__str__"
    ]
   },
   {
@@ -347,26 +377,6 @@
    "outputs": [],
    "source": [
     "from Bio import Restriction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_plib_seq(service, num):\n",
-    "    seq = api.read_sequence(\n",
-    "        service.files()\n",
-    "        .get_media(\n",
-    "            fileId=api.util.regex_key(\n",
-    "                plasmid_maps, f\"pLIB{num}\\\\.\", check_duplicates=True\n",
-    "            )[\"id\"]\n",
-    "        )\n",
-    "        .execute()\n",
-    "        .decode(\"utf8\")\n",
-    "    )\n",
-    "    return seq"
    ]
   },
   {
@@ -405,7 +415,8 @@
     "    (sequence.reverse_complement(seq5), Restriction.BsaI, \"Name5\", \"misc_feature\"),\n",
     "]\n",
     "\n",
-    "golden_gate.assemble(to_join, linear=False)"
+    "assembly = golden_gate.assemble(to_join, linear=False)\n",
+    "assembly"
    ]
   },
   {
@@ -414,9 +425,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"/Users/jacob/Downloads/test2.gb\", \"w\") as f:\n",
+    "with open(\"/Users/jacob/Downloads/test3.gb\", \"w\") as f:\n",
     "    f.write(assembly.format(\"gb\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
