[fp_aggregation] started running metrics on test cases to confirm

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -20,7 +20,7 @@
     "import itertools\n",
     "import os.path\n",
     "from os import path\n",
-    "from itertools import combinations\n",
+    "import itertools\n",
     "\n",
     "# import cv2\n",
     "from matplotlib.offsetbox import TextArea, DrawingArea, OffsetImage, AnnotationBbox\n",
@@ -93,7 +93,8 @@
     "fig, axes = plt.subplots(1, 2, sharex=True, sharey=True)\n",
     "ax = axes.ravel()\n",
     "ax[0].imshow(phase_img)\n",
-    "ax[1].imshow(fluor_img, cmap=\"RdGy\")"
+    "ax[1].imshow(fluor_img, cmap=\"RdGy\")\n",
+    "# seg = segment_phase(phase_img)"
    ]
   },
   {
@@ -527,15 +528,32 @@
     "    shift=None,\n",
     "    below_thresh_zero=False,\n",
     "    as_frac_total_original=False,\n",
+    "    total_area_above_thresh=False,\n",
     "):\n",
+    "    #     threshold = area above the first crossing of which we want to integrate.\n",
+    "    # as_frac_total = True means our output will be the above area divided by the total integral of the shifted function.\n",
+    "    # shift = if we want to integrate RDF-1, then shift = 1\n",
+    "    # below_thresh_zero = True means all values below the threshold (of the shifted function)\n",
+    "    # will be set to 0 and so be ignore in the integration.\n",
+    "    # as_frac_total_original = True means our output will be the above area divided\n",
+    "    # by the total integral of the UNshifted function.\n",
+    "    # total_area_above_thresh = True means instead of just integrating above the first cross,\n",
+    "    # we integrate everything above the threshold.\n",
     "    func_vals_original = np.copy(func_vals)\n",
     "    if shift:\n",
     "        func_vals -= shift\n",
-    "    i = 0\n",
-    "    while i < len(func_vals) and func_vals[i] > threshold:\n",
-    "        i += 1\n",
-    "    r_vals_thresh, func_vals_thresh = r_vals[:i], func_vals[:i]\n",
-    "    area = np.trapz(func_vals_thresh, x=r_vals_thresh)\n",
+    "    if not total_area_above_thresh:\n",
+    "        i = 0\n",
+    "        while i < len(func_vals) and func_vals[i] > threshold:\n",
+    "            i += 1\n",
+    "        r_vals_thresh, func_vals_thresh = r_vals[:i], func_vals[:i]\n",
+    "        area = np.trapz(func_vals_thresh, x=r_vals_thresh)\n",
+    "    else:\n",
+    "        f_vals = np.copy(func_vals)\n",
+    "        for i, val in enumerate(f_vals):\n",
+    "            if val < threshold:\n",
+    "                f_vals[i] = 0\n",
+    "        area = np.trapz(f_vals, x=r_vals)\n",
     "    if below_thresh_zero:\n",
     "        for i, val in enumerate(func_vals):\n",
     "            if val < threshold:\n",
@@ -563,6 +581,7 @@
     "    shift=None,\n",
     "    below_thresh_zero=False,\n",
     "    as_frac_total_original=False,\n",
+    "    total_area_above_thresh=False,\n",
     "):\n",
     "    r_values_list, func_values_list = get_funcvals_from_txt(filename, start_r)\n",
     "    area_under_list = []\n",
@@ -576,6 +595,7 @@
     "                shift=shift,\n",
     "                below_thresh_zero=below_thresh_zero,\n",
     "                as_frac_total_original=as_frac_total_original,\n",
+    "                total_area_above_thresh=total_area_above_thresh,\n",
     "            )\n",
     "        )\n",
     "    return area_under_list"
@@ -717,15 +737,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def smooth_func_data_from_file(filename, start_r, smooth_window):\n",
-    "    r_values_list, func_values_list = get_funcvals_from_txt(filename,start_r)\n",
-    "    for i,r_vals in enumerate(r_values_list):\n",
-    "    \n",
-    "    \n",
-    "    def moving_average(a, n=3) :\n",
-    "    ret = np.cumsum(a, dtype=float)\n",
-    "    ret[n:] = ret[n:] - ret[:-n]\n",
-    "    return ret[n - 1:] / n"
+    "# def smooth_func_data_from_file(filename, start_r, smooth_window):\n",
+    "#     r_values_list, func_values_list = get_funcvals_from_txt(filename,start_r)\n",
+    "#     for i,r_vals in enumerate(r_values_list):\n",
+    "\n",
+    "\n",
+    "#     def moving_average(a, n=3) :\n",
+    "#     ret = np.cumsum(a, dtype=float)\n",
+    "#     ret[n:] = ret[n:] - ret[:-n]\n",
+    "#     return ret[n - 1:] / n"
    ]
   },
   {
@@ -839,7 +859,7 @@
     "                dr=1,\n",
     "                rdfsavetxt=date_stamp_output + \"/rdf_\" + name,\n",
     "            )\n",
-    "        fig, axes = plt.subplots(3, 4, figsize=(12, 9))\n",
+    "        fig, axes = plt.subplots(4, 4, figsize=(12, 12))\n",
     "        ax = axes.ravel()\n",
     "        plot_gr_from_file(\n",
     "            date_stamp_data + \"/rdf_\" + name, 1, savefig=None, line=[1], ax=ax[0]\n",
@@ -869,30 +889,45 @@
     "        number_rdf_crosses = number_threshold_crosses_from_file(\n",
     "            date_stamp_data + \"/rdf_\" + name, 1, 0, shift=1, rel_to_length=True\n",
     "        )\n",
+    "        total_area_under_rdf_shift1_thresh0_as_frac_total = area_under_from_file(\n",
+    "            date_stamp_data + \"/rdf_\" + name,\n",
+    "            1,\n",
+    "            0,\n",
+    "            shift=1,\n",
+    "            as_frac_total=True,\n",
+    "            below_thresh_zero=True,\n",
+    "            as_frac_total_original=True,\n",
+    "            total_area_above_thresh=True,\n",
+    "        )\n",
     "\n",
     "        to_plot = [\n",
     "            [\"First RDF-1=0\", val_first_rdf_cross, 20],\n",
-    "            [\"Integral RDF-1>0\", area_under_rdf_shift1_thresh0, 25],\n",
+    "            [\"Initial integral RDF-1>0\", area_under_rdf_shift1_thresh0, 25],\n",
     "            [\n",
-    "                \"Integral RDF-1>0 as frac total\",\n",
+    "                \"Initial integral RDF-1>0 as frac total\",\n",
     "                area_under_rdf_shift1_thresh0_as_frac_total,\n",
     "                1,\n",
     "            ],\n",
     "            [\"RDF-1 fluctuation frequency\", number_rdf_crosses, 1],\n",
+    "            [\n",
+    "                \"Total integral RDF-1>0 as frac total\",\n",
+    "                total_area_under_rdf_shift1_thresh0_as_frac_total,\n",
+    "                1,\n",
+    "            ],\n",
     "        ]\n",
     "\n",
-    "        for i in np.arange(1, 5):\n",
+    "        for i in np.arange(1, 6):\n",
     "            ax[i].hist(to_plot[i - 1][1], bins=20, range=(0, to_plot[i - 1][2]))\n",
     "            ax[i].set_title(to_plot[i - 1][0])\n",
     "\n",
-    "        combs = combinations([0, 1, 2, 3], 2)\n",
+    "        combs = itertools.combinations([0, 1, 2, 3, 4], 2)\n",
     "\n",
     "        for i, comb in enumerate(combs):\n",
-    "            ax[i + 5].scatter(to_plot[comb[0]][1], to_plot[comb[1]][1])\n",
-    "            ax[i + 5].set_xlabel(to_plot[comb[0]][0])\n",
-    "            ax[i + 5].set_ylabel(to_plot[comb[1]][0])\n",
-    "            ax[i + 5].set_xlim(0, to_plot[comb[0]][2])\n",
-    "            ax[i + 5].set_ylim(0, to_plot[comb[1]][2])\n",
+    "            ax[i + 6].scatter(to_plot[comb[0]][1], to_plot[comb[1]][1])\n",
+    "            ax[i + 6].set_xlabel(to_plot[comb[0]][0])\n",
+    "            ax[i + 6].set_ylabel(to_plot[comb[1]][0])\n",
+    "            ax[i + 6].set_xlim(0, to_plot[comb[0]][2])\n",
+    "            ax[i + 6].set_ylim(0, to_plot[comb[1]][2])\n",
     "\n",
     "        fig.suptitle(name + \" fov: \" + str(fov_index), fontsize=14, y=1.05)\n",
     "        plt.tight_layout()\n",
@@ -919,7 +954,7 @@
     "        \"chr_P_sfGFP_20x_ref10max\",\n",
     "        0,\n",
     "        \"20200724\",\n",
-    "        \"20200725\",\n",
+    "        \"20200727\",\n",
     "        5,\n",
     "        np.arange(200),\n",
     "        False,\n",
@@ -929,7 +964,7 @@
     "        \"chr_P_GFPmut3_20x_ref10max\",\n",
     "        0,\n",
     "        \"20200724\",\n",
-    "        \"20200725\",\n",
+    "        \"20200727\",\n",
     "        5,\n",
     "        np.arange(200),\n",
     "        False,\n",
@@ -937,6 +972,253 @@
     "]\n",
     "\n",
     "generate_analysis_plots(files_to_analyse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_test_image(\n",
+    "    size=(200, 200),\n",
+    "    mask=None,\n",
+    "    shapes=[[\"circle\", [100, 100], 10, 100]],\n",
+    "    savename=\"test\",\n",
+    "    background=None,\n",
+    "    cell_background=None,\n",
+    "):\n",
+    "    # shape = ['rings'=concentric circles, 'circle'=circle, 'gaussian'=2d gaussian]\n",
+    "    # shape == 'circle': ['circle',centre position indices,radius,intensity]\n",
+    "    # shape == 'rings': ['rings',centre position indices,\n",
+    "    # radius of smallest circle, intensity, width of rings, distance between rings]\n",
+    "    # shape == 'gaussian': ['gaussian', centre position indices, stdevs, intensity] (mean = position)\n",
+    "    # mask should be False where the cell is.\n",
+    "    if not background:\n",
+    "        image = np.zeros(size)\n",
+    "    elif background[0] == \"gaussian\":\n",
+    "        mean, stdev = background[1:]\n",
+    "        image = np.random.normal(loc=mean, scale=stdev, size=size)\n",
+    "    if np.size(mask) > 1:\n",
+    "        image = np.ma.array(image, mask=mask)\n",
+    "        if cell_background:\n",
+    "            if cell_background[0] == \"gaussian\":\n",
+    "                mean, stdev = cell_background[1:]\n",
+    "                cell_noise = np.random.normal(loc=mean, scale=stdev, size=size)\n",
+    "                image += cell_noise\n",
+    "    for shape in shapes:\n",
+    "        if shape[0] == \"circle\" or shape[0] == \"rings\":\n",
+    "            image_to_add = np.zeros(size)\n",
+    "            position, r, intensity = shape[1:]\n",
+    "            ranges = np.arange(np.floor(-r), np.ceil(r) + 1)\n",
+    "            rel_points = np.where(\n",
+    "                (ranges[np.newaxis, :]) ** 2 + (ranges[:, np.newaxis]) ** 2 < r**2\n",
+    "            )\n",
+    "            points = [\n",
+    "                rel_points[0] + position[0] - np.ceil(r),\n",
+    "                rel_points[1] + position[1] - np.ceil(r),\n",
+    "            ]\n",
+    "            image_to_add[\n",
+    "                list(map(int, points[0])), list(map(int, points[1]))\n",
+    "            ] = intensity\n",
+    "        #         if shape[0] == 'rings':\n",
+    "\n",
+    "        elif shape[0] == \"gaussian\":\n",
+    "            position, stdevs, intensity = shape[1:]\n",
+    "            vals0, vals1 = np.meshgrid(np.arange(size[0]), np.arange(size[1]))\n",
+    "            image_to_add = np.exp(\n",
+    "                -(\n",
+    "                    (vals0 - position[0]) ** 2 / (2 * stdevs[0]) ** 2\n",
+    "                    + (vals1 - position[1]) ** 2 / (2 * stdevs[1]) ** 2\n",
+    "                )\n",
+    "            )\n",
+    "            image_to_add *= intensity\n",
+    "        image += image_to_add\n",
+    "    if savename:\n",
+    "        np.savetxt(savename, image)\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = filenames[14]\n",
+    "print(\"file\", file)\n",
+    "nd2 = nd2reader.ND2Reader(file)\n",
+    "fov_index = 20\n",
+    "phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
+    "fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
+    "# phase_img = nd2.get_frame_2D(v=0, c=0, z=0)[1100:3000,500:2250]\n",
+    "# fluor_img = nd2.get_frame_2D(v=0, c=1, z=0)[1100:3000,500:2250]\n",
+    "fig, axes = plt.subplots(1, 5, sharex=True, sharey=True)\n",
+    "ax = axes.ravel()\n",
+    "ax[0].imshow(phase_img)\n",
+    "ax[1].imshow(fluor_img, cmap=\"RdGy\")\n",
+    "seg = segment_phase(phase_img)\n",
+    "ax[2].imshow(seg)\n",
+    "ax[3].imshow(seg[700:850, 425:575])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = np.genfromtxt(\"cellmask\")\n",
+    "mask = np.ma.masked_array(mask, np.logical_not(mask)).mask\n",
+    "ax[4].imshow(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now determine the values of these metrics in different test cases, to check that we get values that correspond\n",
+    "# with what we expect by eye.\n",
+    "\n",
+    "# Test intensities (how high above background noise) and stdevs (how diffuse) of centred blobs. Then repeat for\n",
+    "# blobs near the edge.\n",
+    "\n",
+    "# Looks weird? Why is initial int the opposite of initial int as frac? Check the zero_below_thresh etc to be\n",
+    "# certain about what these are computing.\n",
+    "\n",
+    "base_name = \"20200727/refpoint1_nonoise/refpoint1_nonoise\"\n",
+    "\n",
+    "val_first_rdf_cross = []\n",
+    "area_under_rdf_shift1_thresh0 = []\n",
+    "area_under_rdf_shift1_thresh0_as_frac_total = []\n",
+    "number_rdf_crosses = []\n",
+    "total_area_under_rdf_shift1_thresh0_as_frac_total = []\n",
+    "\n",
+    "intensities = np.linspace(1, 500, 20)\n",
+    "stdevs = np.linspace(0.5, 3, 20)\n",
+    "\n",
+    "for intensity in intensities:\n",
+    "    val_first_rdf_cross_toadd = []\n",
+    "    area_under_rdf_shift1_thresh0_toadd = []\n",
+    "    area_under_rdf_shift1_thresh0_as_frac_total_toadd = []\n",
+    "    number_rdf_crosses_toadd = []\n",
+    "    total_area_under_rdf_shift1_thresh0_as_frac_total_toadd = []\n",
+    "    for stdev in stdevs:\n",
+    "        test_image = generate_test_image(\n",
+    "            size=(150, 150),\n",
+    "            shapes=[[\"gaussian\", [70, 70], [stdev, stdev], intensity]],\n",
+    "            background=None,\n",
+    "            savename=None,\n",
+    "            mask=mask,\n",
+    "            cell_background=None,\n",
+    "        )\n",
+    "        #         autocorr(np.genfromtxt('cellmask'), test_image, cell_indices=[20], time_allowed=80,\n",
+    "        #         savetxt=None,ref_point_val = ['max',10],r_values = None,\n",
+    "        #             gr_values = None, intensity_weighted = True,start_r=1,dr=1,\n",
+    "        #             rdfsavetxt=None)\n",
+    "        r_vals, gr_vals = rdf(\n",
+    "            np.genfromtxt(\"cellmask\"),\n",
+    "            test_image,\n",
+    "            ref_point_val=[\"max\", 1],\n",
+    "            cell_indices=[20],\n",
+    "            time_allowed=80,\n",
+    "            savetxt=None,\n",
+    "            start_r=1,\n",
+    "            dr=1,\n",
+    "            intensity_weighted=True,\n",
+    "        )\n",
+    "        r_vals, gr_vals = np.array(r_vals[0]), np.array(gr_vals[0])\n",
+    "        val_first_rdf_cross_toadd.append(\n",
+    "            first_threshold_cross(r_vals, gr_vals, 0, shift=1)\n",
+    "        )\n",
+    "        area_under_rdf_shift1_thresh0_toadd.append(\n",
+    "            area_under(\n",
+    "                r_vals,\n",
+    "                gr_vals,\n",
+    "                0,\n",
+    "                shift=1,\n",
+    "                as_frac_total=False,\n",
+    "                below_thresh_zero=False,\n",
+    "            )\n",
+    "        )\n",
+    "        area_under_rdf_shift1_thresh0_as_frac_total_toadd.append(\n",
+    "            area_under(\n",
+    "                r_vals,\n",
+    "                gr_vals,\n",
+    "                0,\n",
+    "                shift=1,\n",
+    "                as_frac_total=True,\n",
+    "                below_thresh_zero=True,\n",
+    "                as_frac_total_original=True,\n",
+    "            )\n",
+    "        )\n",
+    "        number_rdf_crosses_toadd.append(\n",
+    "            number_threshold_crosses(r_vals, gr_vals, 0, shift=1, rel_to_length=True)\n",
+    "        )\n",
+    "        total_area_under_rdf_shift1_thresh0_as_frac_total_toadd.append(\n",
+    "            area_under(\n",
+    "                r_vals,\n",
+    "                gr_vals,\n",
+    "                0,\n",
+    "                shift=1,\n",
+    "                as_frac_total=True,\n",
+    "                below_thresh_zero=True,\n",
+    "                as_frac_total_original=True,\n",
+    "                total_area_above_thresh=True,\n",
+    "            )\n",
+    "        )\n",
+    "    val_first_rdf_cross.append(val_first_rdf_cross_toadd)\n",
+    "    area_under_rdf_shift1_thresh0.append(area_under_rdf_shift1_thresh0_toadd)\n",
+    "    area_under_rdf_shift1_thresh0_as_frac_total.append(\n",
+    "        area_under_rdf_shift1_thresh0_as_frac_total_toadd\n",
+    "    )\n",
+    "    number_rdf_crosses.append(number_rdf_crosses_toadd)\n",
+    "    total_area_under_rdf_shift1_thresh0_as_frac_total.append(\n",
+    "        total_area_under_rdf_shift1_thresh0_as_frac_total_toadd\n",
+    "    )\n",
+    "\n",
+    "np.savetxt(base_name + \"_intensities\", intensities)\n",
+    "np.savetxt(base_name + \"_stdevs\", stdevs)\n",
+    "np.savetxt(base_name + \"_firstrdfcross\", val_first_rdf_cross)\n",
+    "np.savetxt(base_name + \"_initialintegral\", area_under_rdf_shift1_thresh0)\n",
+    "np.savetxt(\n",
+    "    base_name + \"_initialintegralasfrac\", area_under_rdf_shift1_thresh0_as_frac_total\n",
+    ")\n",
+    "np.savetxt(base_name + \"_rdfcrosses\", number_rdf_crosses)\n",
+    "np.savetxt(\n",
+    "    base_name + \"_totalintegral\", total_area_under_rdf_shift1_thresh0_as_frac_total\n",
+    ")\n",
+    "\n",
+    "\n",
+    "print(\"Complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 3, figsize=(9, 6))\n",
+    "ax = axes.ravel()\n",
+    "ax[0].pcolormesh(stdevs, intensities, val_first_rdf_cross)\n",
+    "ax[0].set_title(\"First RDF-1=0\")\n",
+    "ax[1].pcolormesh(stdevs, intensities, area_under_rdf_shift1_thresh0)\n",
+    "ax[1].set_title(\"Initial integral RDF-1>0\")\n",
+    "ax[2].pcolormesh(stdevs, intensities, area_under_rdf_shift1_thresh0_as_frac_total)\n",
+    "ax[2].set_title(\"Initial integral RDF-1>0 as frac total\")\n",
+    "ax[3].pcolormesh(stdevs, intensities, number_rdf_crosses)\n",
+    "ax[3].set_title(\"Frequency RDF-1=0\")\n",
+    "ax[4].pcolormesh(stdevs, intensities, total_area_under_rdf_shift1_thresh0_as_frac_total)\n",
+    "ax[4].set_title(\"Total integral RDF-1>0\")\n",
+    "for axis in ax:\n",
+    "    axis.set_xlabel(\"Stdev\")\n",
+    "    axis.set_ylabel(\"Intensity\")\n",
+    "plt.tight_layout()\n",
+    "plt.suptitle(\"refpoint1 no noise\", y=1.05, fontsize=14)\n",
+    "fig.savefig(\"20200727/refpoint1_nonoise.png\", bbox_inches=\"tight\")"
    ]
   },
   {
