--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Testcreator.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Testcreator.ipynb
@@ -143,12 +143,16 @@
     "# test_image = generate_test_image(size=(150,150),shapes=[['gaussian',[70,70],[5,5],100]]\n",
     "#                                  ,savename='test_image',mask=mask)\n",
     "\n",
-    "# test_image = generate_test_image(size=(150,150),shapes=[['gaussian',[70,70],[2,2],100]],\n",
-    "#                                  background=['gaussian',10,3]\n",
-    "#                                  ,savename='test_image',mask=mask,\n",
-    "#                                 cell_background = ['gaussian',20,3])\n",
+    "test_image = generate_test_image(\n",
+    "    size=(150, 150),\n",
+    "    shapes=[[\"gaussian\", [70, 70], [1, 1], 100]],\n",
+    "    background=[\"gaussian\", 10, 3],\n",
+    "    savename=\"test_image\",\n",
+    "    mask=mask,\n",
+    "    cell_background=[\"gaussian\", 20, 3],\n",
+    ")\n",
     "\n",
-    "# test_image = generate_test_image(size=(150,150),shapes=[['gaussian',[38,70],[5,5],0]],\n",
+    "# test_image = generate_test_image(size=(150,150),shapes=[['gaussian',[38,70],[3,3],0]],\n",
     "#                                  savename='test_image',mask=mask,background=['gaussian',10,3],\n",
     "#                                  cell_background = ['gaussian',20,3])\n",
     "\n",
@@ -157,34 +161,27 @@
     "#                                  savename='test_image',mask=mask,background=['gaussian',10,3],\n",
     "#                                  cell_background = ['gaussian',20,3])\n",
     "\n",
-    "test_image = generate_test_image(\n",
-    "    size=(150, 150),\n",
-    "    shapes=[\n",
-    "        [\"gaussian\", [38, 70], [2, 2], 40],\n",
-    "        [\"gaussian\", [100, 80], [4, 4], 35],\n",
-    "        [\"gaussian\", [70, 80], [4, 2], 40],\n",
-    "        [\"gaussian\", [85, 65], [5, 2], 20],\n",
-    "        [\"gaussian\", [40, 68], [2, 6], 10],\n",
-    "        [\"gaussian\", [76, 75], [2, 2], 20],\n",
-    "        [\"gaussian\", [50, 72], [3, 2], 30],\n",
-    "        [\"gaussian\", [55, 79], [4, 2], 20],\n",
-    "        [\"gaussian\", [45, 63], [3, 5], 10],\n",
-    "    ],\n",
-    "    savename=\"test_image\",\n",
-    "    mask=mask,\n",
-    "    background=[\"gaussian\", 10, 3],\n",
-    "    cell_background=[\"gaussian\", 20, 3],\n",
-    ")\n",
+    "# test_image = generate_test_image(size=(150,150),shapes=[['gaussian',[38,70],[2,2],40],\n",
+    "#                                                        ['gaussian',[100,80],[4,4],35],\n",
+    "#                                                        ['gaussian',[70,80],[4,2],40],\n",
+    "#                                                        ['gaussian',[85,65],[5,2],20],\n",
+    "#                                                        ['gaussian',[40,68],[2,6],10],\n",
+    "#                                                        ['gaussian',[76,75],[2,2],20],\n",
+    "#                                                        ['gaussian',[50,72],[3,2],30],\n",
+    "#                                                        ['gaussian',[55,79],[4,2],20],\n",
+    "#                                                        ['gaussian',[45,63],[3,5],10]],\n",
+    "#                                  savename='test_image',mask=mask,background=['gaussian',10,3],\n",
+    "#                                  cell_background = ['gaussian',20,3])\n",
     "\n",
     "plt.imshow(test_image.data)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
